--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,10 +6,12 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.17",
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "firebase": "^5.10.1",
     "i": "^0.3.6",
     "node-sass": "^4.12.0",
     "npm": "^6.9.0",
     "react": "^16.8.6",
+    "react-datepicker": "^2.5.0",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0",
