--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0",
     "react-scrollable-list-view": "^2.0.1",
+    "react-vis": "^1.11.7",
     "scroll-into-view": "^1.9.6",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.86.0"
