--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,12 +7,13 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.17",
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "axios": "^0.19.0",
     "firebase": "^5.11.1",
     "i": "^0.3.6",
     "node-sass": "^4.11.0",
     "npm": "^6.9.0",
     "react": "^16.8.6",
-    "react-datepicker": "^2.5.0",
+    "react-datepicker": "^2.8.0",
     "react-dom": "^16.8.6",
     "react-places-autocomplete": "^7.2.1",
     "react-router-dom": "^5.0.0",
