--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,13 +2,14 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://myusername.github.io/CS498RKFinalProject",
+  "homepage": "https://darrenmuliawan.github.io/LostAndFound",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.17",
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "axios": "^0.19.0",
     "firebase": "^5.11.1",
+    "gh-pages": "^2.0.1",
     "i": "^0.3.6",
     "node-sass": "^4.11.0",
     "npm": "^6.9.0",
